# DataLab_Client

./: .coveragerc  .env  .gitignore  .isort.cfg  CHANGELOG.md  README.md  pyproject.toml
cdl_client/: __init__.py  baseproxy.py  remote.py
cdl_client/tests/: __init__.py  remoteclient_app.py  remoteclient_base.py  remoteclient_unit.py
cdlclient/: __init__.py  baseproxy.py  config.py  qthelpers.py  remote.py  simplemodel.py
cdlclient/locale/fr/LC_MESSAGES/: cdlclient.po
cdlclient/tests/: __init__.py  connect_dialog.py  convert_png_to_code.py  get_object_dialog.py  imagefile_to_code.py  remoteclient_app.py  remoteclient_base.py  remoteclient_unit.py
cdlclient/widgets/: __init__.py  connection.py  objectdialog.py  qthelpers.py  svg_icons.py
doc/: api.rst  conf.py  example.rst  index.rst  installation.rst  overview.rst  remote_example.py  requirements.rst  update_requirements.py
scripts/: build_doc.bat  gettext_scan.bat  run_coverage.bat
