# DataLab setup configuration file

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CDL_Client"
authors = [{ name = "Codra", email = "p.raybaut@codra.fr" }]
description = "DataLab Client is a Python library providing a proxy to DataLab application Server"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8, <4"
dependencies = ["NumPy >= 1.21", "guidata >= 3.1"]
dynamic = ["version"]

[project.gui-scripts]
cdl_client-tests = "cdl_client.tests:run"

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "Coverage"]
doc = ["sphinx", "sphinx_intl", "pydata-sphinx-theme"]
test = ["PyQt5", "QtPy", "plotpy"]

[tool.setuptools.packages.find]
include = ["cdl_client*"]

[tool.setuptools.package-data]
"*" = ["*.svg", "*.mo", "*.txt", "*.json"]

[tool.setuptools.dynamic]
version = { attr = "cdl_client.__version__" }
